tests/errors/sem_call2.java
public class sem_call2 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(3 , 10 , 7);
}
}